# YOLO_CPP

./: OpenCVHelperFunctions.cpp  README.md  YOLO_Abstract.h  YOLO_v8ObjDetection.cpp  YOLO_v8ObjDetection.h  main.cpp
src/: CMakeLists.txt  DetectedFeature.cpp  DetectedFeature.h  OpenCVHelperFunctions.h  YOLO_Abstract.cpp  YOLO_Abstract.h  YOLO_AbstractFactory.cpp  YOLO_AbstractFactory.h  YOLO_v5ObjDetection.cpp  YOLO_v5ObjDetection.h  YOLO_v8ObjDetection.cpp  YOLO_v8ObjDetection.h  YOLO_v8Pose.cpp  YOLO_v8Pose.h  main.cpp
